Obtener correctamente Stock CC