@@ -6,7 +6,10 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -33,35 +36,90 @@ public class CocinaCentralController {
     @GetMapping("/stock")
     public List<StockCocinaGroupedDTO> listGroupedStock() {
         List<StockDateCocinaCentral> stockEntries = stockDateService.findAllWithProducts();
-        // Asegúrate de que este método haga fetch join de product →
-        // productsCocinaCentral → product real
 
+        // Agrupar por la fecha del pedido (NO por la del producto)
         Map<LocalDate, List<StockDateCocinaCentral>> grouped = stockEntries.stream()
                 .collect(Collectors.groupingBy(StockDateCocinaCentral::getDate));
 
         List<StockCocinaGroupedDTO> response = new ArrayList<>();
 
         for (Map.Entry<LocalDate, List<StockDateCocinaCentral>> entry : grouped.entrySet()) {
-            LocalDate date = entry.getKey();
-            List<StockDateCocinaCentral> stockList = entry.getValue();
+            LocalDate stockDate = entry.getKey(); // fecha del pedido
+            List<StockDateCocinaCentral> entriesForDate = entry.getValue();
 
-            List<ProductStockCocinaDTO> productsDTO = stockList.stream().map(stock -> {
-                ProductsCocinaCentral productEntry = stock.getProduct();
-                String productName = productEntry.getProduct() != null ? productEntry.getProduct().getName() : "—";
-                int stockAmount = productEntry.getStock();
-                String productDate = productEntry.getDate() != null ? productEntry.getDate().toString() : "";
-                return new ProductStockCocinaDTO(productName, stockAmount, productDate);
-            }).collect(Collectors.toList());
+            List<ProductStockCocinaDTO> productsDTO = entriesForDate.stream()
+                    .map(StockDateCocinaCentral::getProduct)
+                    .filter(Objects::nonNull)
+                    .map(p -> new ProductStockCocinaDTO(
+                            p.getProduct().getName(),
+                            p.getStock(),
+                            p.getDate() != null ? p.getDate().toLocalDate().toString() : null // fecha propia del
+                                                                                              // producto
+                    ))
+                    .toList();
 
-            String localName = stockList.isEmpty() ? "" : stockList.get(0).getProduct().getLocalName();
+            String localName = entriesForDate.isEmpty() ? "" : entriesForDate.get(0).getProduct().getLocalName();
 
-            response.add(new StockCocinaGroupedDTO(date.toString(), localName, productsDTO));
+            response.add(new StockCocinaGroupedDTO(stockDate.toString(), localName, productsDTO));
         }
 
-        // Ordenar por fecha descendente
+        // Ordenar por fecha del pedido descendente
         response.sort(Comparator.comparing(StockCocinaGroupedDTO::getDate).reversed());
-
         return response;
+    }
+
+    @GetMapping("/last-stock")
+    public ResponseEntity<StockCocinaGroupedDTO> getLastStock() {
+        List<StockDateCocinaCentral> lastStockList = stockDateService.findLastStock();
+
+        if (lastStockList == null || lastStockList.isEmpty()) {
+            return ResponseEntity.noContent().build();
+        }
+
+        LocalDate lastDate = lastStockList.get(0).getDate();
+        String formattedDate = lastDate.toString();
+
+        String localName = Optional.ofNullable(lastStockList.get(0).getProduct())
+                .map(ProductsCocinaCentral::getLocalName)
+                .orElse("Cocina Central");
+
+        // Agrupar por producto y fecha
+        Map<String, Map<String, Integer>> groupedData = new HashMap<>();
+
+        for (StockDateCocinaCentral s : lastStockList) {
+            ProductsCocinaCentral pc = s.getProduct();
+            if (pc == null || pc.getProduct() == null)
+                continue;
+
+            String productName = pc.getProduct().getName();
+            String productDate = pc.getDate() != null ? pc.getDate().toString()
+                    : s.getDate() != null ? s.getDate().toString()
+                            : formattedDate;
+
+            int stock = pc.getStock();
+
+            groupedData
+                    .computeIfAbsent(productName, k -> new HashMap<>())
+                    .merge(productDate, stock, Integer::sum);
+        }
+
+        // Crear DTO plano: un ProductStockCocinaDTO por combinación producto-fecha
+        List<ProductStockCocinaDTO> products = groupedData.entrySet().stream()
+                .flatMap(entry -> {
+                    String productName = entry.getKey();
+                    return entry.getValue().entrySet().stream()
+                            .map(fechaEntry -> new ProductStockCocinaDTO(
+                                    productName,
+                                    fechaEntry.getValue(),
+                                    fechaEntry.getKey()));
+                })
+                .sorted(Comparator
+                        .comparing(ProductStockCocinaDTO::getProductName)
+                        .thenComparing(ProductStockCocinaDTO::getProductDate))
+                .toList();
+
+        StockCocinaGroupedDTO dto = new StockCocinaGroupedDTO(formattedDate, localName, products);
+        return ResponseEntity.ok(dto);
     }
 
     @PostMapping("/stock")
